--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,6 @@ set(common_src src/image_converter.cpp src/ros_compat.cpp)
 add_executable(video_source src/node_video_source.cpp ${common_src})
 target_link_libraries(video_source ${catkin_LIBRARIES} jetson-inference)
 
-catkin_install_python(PROGRAMS trt_yolo_v3_batch.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+#catkin_install_python(PROGRAMS trt_yolo_v3_batch.py
+#  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#)
