--- a/package.xml
+++ b/package.xml
@@ -9,26 +9,15 @@
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>cv_bridge</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>vision_msgs</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>message_generation</build_depend>
+  <depend>cv_bridge_customized</depend>
+  <depend>image_transport</depend>
+  <depend>rospy</depend>
+  <depend>sensor_msgs</depend>
+  <depend>darknet_ros_msgs</depend>
+  <depend>nodelet</depend>
+  <depend>message_generation</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>  
+  <depend>message_runtime</depend>
 
-  <build_export_depend>cv_bridge</build_export_depend>
-  <build_export_depend>image_transport</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>vision_msgs</build_export_depend>
-  <build_export_depend>nodelet</build_export_depend>
-  
-  <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>image_transport</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>vision_msgs</exec_depend>
-  <exec_depend>nodelet</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
 </package>
